--- a/foodtonomous/package.json
+++ b/foodtonomous/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.21.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
