--- a/foodtonomous/package.json
+++ b/foodtonomous/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@eva-design/eva": "2.0.0",
+    "@mapbox/polyline": "^1.1.1",
     "@react-native-async-storage/async-storage": "^1.14.1",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^5.9.3",
@@ -22,7 +24,10 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-datepicker": "^1.7.2",
+    "react-native-dotenv": "^2.5.3",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-maps": "0.27.1",
+    "react-native-permissions": "^3.0.1",
     "react-native-push-notification": "^7.2.3",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
