patch android setting

--- a/foodtonomous/android/app/src/main/AndroidManifest.xml
+++ b/foodtonomous/android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
       android:theme="@style/AppTheme">
        <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value="GOOGLE API KEY"/>
+        android:value="AIzaSyD7ZyaYiaoe1CMqHaDcaWUTX5mmgK38GQk"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
