--- a/foodtonomous/package.json
+++ b/foodtonomous/package.json
@@ -37,7 +37,8 @@
     "react-navigation": "^4.4.4",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
