--- a/foodtonomous/package.json
+++ b/foodtonomous/package.json
@@ -28,6 +28,7 @@
     "react-native-dotenv": "^2.5.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-maps": "0.27.1",
+    "react-native-modal-datetime-picker": "^9.2.0",
     "react-native-permissions": "^3.0.1",
     "react-native-push-notification": "^7.2.3",
     "react-native-reanimated": "^2.0.0",
