--- a/foodtonomous/package.json
+++ b/foodtonomous/package.json
@@ -36,6 +36,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
     "react-native-svg": "^12.1.0",
+    "react-native-swipe-up-down": "^1.0.7",
     "react-navigation": "^4.4.4",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
